# x11_edid_auto

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  example.toml  makefile
src/: connection.rs  errors.rs  main.rs  monitor.rs
